# mcp-constrained-optimization

./: README.md  README_NEW.md  README_OLD.md  create_pdf_document.py  pyproject.toml
.github/workflows/: publish.yml
constrained_opt_mcp/: __init__.py
constrained_opt_mcp/models/: z3_models.py
docs/: README.md  constrained_optimization_demo.html
examples/: constrained_optimization_demo.ipynb
